[workspace]
members = [
    "adapter_pattern",
    "bridge_pattern",
    "builder_pattern", "command_pattern",
    "factory_pattern",
    "flyweight_pattern",
    "iterator_pattern",
    "observer_pattern",
    "prototype_pattern",
    "proxy_pattern",
    "singleton_pattern",
    "strategy_pattern",
    "template_pattern"
]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true
