[workspace]
members = [
    "adapter_pattern",
    "bridge_pattern",
    "builder_pattern",
    "chain_of_responsibility_pattern",
    "command_pattern",
    "factory_pattern",
    "flyweight_pattern",
    "interpreter_pattern",
    "iterator_pattern",
    "mediator_pattern",
    "memento_pattern",
    "null_object_pattern",
    "observer_pattern",
    "prototype_pattern",
    "proxy_pattern",
    "singleton_pattern",
    "state_pattern",
    "strategy_pattern",
    "template_pattern"
]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true
